# engine-predictive-maintenance

./: .gitignore  DebasishDas_PredictiveMaintenance_Notebook.html  Engine_Predictive_Maintenance_Business_Report.docx  MODEL_README.md  Xtest.csv  Xtrain.csv  best_engine_model.joblib  main.py  project - Interim.ipynb  project.ipynb  project_notebook_existing_outputs.html  pyproject.toml
.github/workflows/: pipeline.yaml
predictive_maintenance/data/: engine_data.csv
predictive_maintenance/deployment/: app.py
predictive_maintenance/hosting/: hosting.py
predictive_maintenance/model_building/: data_register.py  prep.py  train.py
